# qtGhraphicsViewExample

./: CMakeLists.txt  README.md  interface.cpp  interface.h  interface.ui  main.cpp  maininterface.cpp  maininterface.h  maininterface.ui  paint.cpp
